<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Activity title text -->
    <kro.kr.rhya_network.dr_talk.util.AutoResizeTextView
        android:id="@+id/activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/sebang_gothic_bold"
        android:gravity="center|center_horizontal"
        android:singleLine="true"
        android:text="@string/activity_request__activityTitle"
        android:textColor="#373737"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- 요청 권한 종류 | 저장소 -->
    <ImageView
        android:id="@+id/iconPermissionStorage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/image_openError_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTitle"
        app:srcCompat="@drawable/ic_permission_storage" />
    <kro.kr.rhya_network.dr_talk.util.AutoResizeTextView
        android:id="@+id/autoResizeTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/sebang_gothic"
        android:gravity="center|start"
        android:singleLine="true"
        android:text="@string/activity_request__permissionStorageText"
        android:textColor="#777777"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iconPermissionStorage"
        app:layout_constraintTop_toBottomOf="@+id/activityTitle" />
    <!-- 요청 권한 종류 | 카메라 -->
    <ImageView
        android:id="@+id/iconPermissionCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_openError_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPermissionStorage"
        app:srcCompat="@drawable/ic_permission_camera" />
    <kro.kr.rhya_network.dr_talk.util.AutoResizeTextView
        android:id="@+id/autoResizeTextView2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sebang_gothic"
        android:gravity="center|start"
        android:singleLine="true"
        android:text="@string/activity_request__permissionCameraText"
        android:textColor="#777777"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iconPermissionCamera"
        app:layout_constraintTop_toBottomOf="@+id/autoResizeTextView" />
    <!-- 요청 권한 종류 | Don't Doz Mode -->
    <ImageView
        android:id="@+id/iconDontDozBattery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_openError_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPermissionCamera"
        app:srcCompat="@drawable/ic_dontdoze_battery" />
    <kro.kr.rhya_network.dr_talk.util.AutoResizeTextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sebang_gothic"
        android:singleLine="true"
        android:gravity="center|start"
        android:text="@string/activity_request__dontDozeModeText"
        android:textColor="#777777"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iconDontDozBattery"
        app:layout_constraintTop_toBottomOf="@+id/autoResizeTextView2" />

    <!-- 이용약관 Checkbox -->
    <CheckBox
        android:id="@+id/touCheckbox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/checkbox_custom_ui"
        android:button="@null"
        app:layout_constraintBottom_toTopOf="@+id/permissionRequestButton"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- 이용약관 TextView -->
    <kro.kr.rhya_network.dr_talk.util.AutoResizeTextView
        android:id="@+id/touTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/sebang_gothic"
        android:gravity="center|start"
        android:textSize="15sp"
        android:textColor="#373737"
        app:layout_constraintBottom_toTopOf="@+id/permissionRequestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/touCheckbox" />


    <!-- 권한 요청 버튼 -->
    <Button
        android:id="@+id/permissionRequestButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/button_shape_v1"
        android:fontFamily="@font/sebang_gothic_bold"
        android:state_pressed="false"
        android:text="@string/activity_request__permissionRequestButton"
        android:textSize="17sp"
        android:enabled="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>